src/z80asm/z80asm2/t/50-layout/expected/layout_jr_relaxation_02.txt
% z88dk-z80asm -v -dump-after-layout t/50-layout//input/layout_jr_relaxation_02.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/50-layout/input/layout_jr_relaxation_02.asm...
t/50-layout/input/layout_jr_relaxation_02.asm:1:4: error: Relative jump out of range: $100
    jr 256    ; cannot relax, constant jump
       ^
Assembly completed with 1 error
